Added image with absolute addressing

--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
   </head>
   <body>
     Hello World With Github Pages
+    <div>
+      <img
+        src="C:\courses\github-pages-demo\example.jpg"
+        style="width: 300px" />
+    </div>
   </body>
 </html>
