Updated image path with relative addressing

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   <body>
     Hello World With Github Pages
     <div>
-      <img
-        src="C:\courses\github-pages-demo\example.jpg"
-        style="width: 300px" />
+      <img src="images/example.jpg" style="width: 300px" />
     </div>
   </body>
 </html>
